--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.scrollableContainer {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 12px;
+  width: 100%;
+  height: 3000px;
+  overflow-y: auto;
+}
+
+.content {
+  width: 100%;
+  height: 5000px;
+}
+
+.btn-cinema {
+  background-color: #ba3469 !important;
+  border: #ba3469 solid 1px !important;
+  border-radius: 35px !important;
+  padding: 0 20px !important;
+  color: white !important;
+  text-transform: uppercase !important;
+}
+
+.btn-cinema:hover {
+  background-color: transparent !important;
+  border: white solid 1px !important;
+}
+
+.input-cinema {
+  border-radius: 35px !important;
+  background: transparent !important;
+  color: white !important;
+  padding: 10px 20px !important;
+}
+
+.input-cinema::placeholder {
+  color: white !important;
+  text-transform: uppercase !important;
 }
